# SIRAJ

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docker/: .gitignore  README.md  docker-compose.local.yml  docker-compose.yml
docker/RagApp/: Dockerfile  alembic.example.ini  alembic.ini  entrypoint.sh
docker/env/: .env.example.app  .env.example.grafana  .env.example.postgres  .env.example.postgres-exporter
docker/nginx/: default.conf
docker/prometheus/: prometheus.yml
docs/: CACHE.md  DESIGN.md  DESIGN_SUMMARY.md  GENAI_LLM_DEPTH.md  RAG_EVAL.md  VECTOR_DB_BATTLE_CARD.md
src/: .env.example  .env.local.example  main.py  requirements.txt
src/assets/: rag_test_doc.txt  rag_test_question.md
src/controllers/: BaseController.py  DataController.py  NLPController.py  ProcessController.py  ProjectController.py  __init__.py
src/helpers/: __init__.py  config.py
src/models/: AssetModel.py  BaseDataModel.py  ChunkModel.py  ProjectModel.py  __init__.py
src/models/db_schemes/: __init__.py
src/models/db_schemes/RagApp/alembic/: env.py
src/models/enums/: AssetTypeEnum.py  DataBaseEnum.py  ProcessEnums.py  ResponseEnums.py
src/routes/: base.py  data.py  nlp.py
src/routes/schemes/: data.py
src/stores/llm/: LLMEnums.py  LLMInterface.py  LLMProviderFactory.py
src/stores/llm/providers/: CohereProvider.py  OpenAIProvider.py  OpenSourceEmbeddingProvider.py  __init__.py
src/stores/llm/templates/: __init__.py  template_parser.py
src/stores/vectordb/: VectorDBEnums.py  VectorDBInterface.py  VectorDBProvidersFactory.py
src/utils/: metrics.py
(+9 files in other folders)
